portfolio version onestatus

--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
                     <p>Use the form on this page or get in touch by other means.</p>
                     <div class="contacts-icons">
                         <p><i class="bi bi-telephone-fill"></i><a href="">+255 7529035</a></p>
-                        <p><i class="bi bi-twitter-x"></i><a href="">Twitter X</a></p>
-                        <p><i class="bi bi-linkedin"></i><a href="">Linkedin</a></p>
+                        <p><i class="bi bi-twitter-x"></i><a href="https://x.com/Luguda2">Twitter X</a></p>
+                        <p><i class="bi bi-linkedin"></i><a href="https://www.linkedin.com/in/charles-luguda-663689214/">Linkedin</a></p>
                     </div>
                 </div>
                 <div class="contacts-form">
